[tool.poetry]
name = "cqrtraffic"
version = "0.1.3-alpha.0"
description = "A package for processing traffic data and fundamental diagram estimation using convex quantile regression"
authors = ["Iaroslav Kriuchkov <iaroslav.kriuchkov@aalto.fi>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/iarokr/cqrtraffic"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7"
pystoned = ">=0.5.8"
numpy = ">=1.23.0"
pandas = ">=1.4.0"
requests = ">=2.28.1"
DateTime = ">=4.5"
matplotlib = ">=3.5.3"
scipy = ">=1.7.3"
pathlib = ">=1.0.1"
XlsxWriter = ">=3.0.0"
pyarrow = ">=9.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
Sphinx = "^5.1.1"
python-semantic-release = "^7.31.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
